Updated version of index.html test file

--- a/FIT3179/Homework/Homework 3/html-test/index.html
+++ b/FIT3179/Homework/Homework 3/html-test/index.html
@@ -8,3 +8,6 @@
     <h2>1.1 Creating Paragraphs (Level 2)</h2>
     <p> Unit: FIT3179</p>
     <p> This is a paragraph about paragraphs</p>
+    <p> This is the modified version of index.html file. </p>
+</body>
+</html>
