--- a/FIT3179/Homework/Homework 3/html-test/index.html
+++ b/FIT3179/Homework/Homework 3/html-test/index.html
@@ -9,5 +9,6 @@
     <p> Unit: FIT3179</p>
     <p> This is a paragraph about paragraphs</p>
     <p> This is the modified version of index.html file. </p>
+    <p> Update here </p>
 </body>
 </html>
